--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="PI Drivers is a website developed to apply everything learned in the SoyHenry course in the Full Stack Developer branch."
+    />
     <title>Drivers</title>
   </head>
   <body>
